# dr-downloader-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: create_release.yml  rust.yml
src/: command_handler.rs  main.rs  marco_utils.rs  printutil.rs  win32.rs
