[package]
name = "dr-downloader-cli"
version = "0.1.0"
authors = ["Frederik P. B. H. <frepbh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dr-downloader = { path = "../dr-downloader", git = "https://github.com/F0903/dr-downloader" }
tokio = { version = "^1.5", features = ["rt", "rt-multi-thread"] }
